[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/player/rig/deemongal.gltf" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/rig/head_shrink.anim" type="Animation" id=2]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=3]
[ext_resource path="res://scenes/player/intro-idle.anim" type="Animation" id=4]
[ext_resource path="res://scenes/player/Camera.gd" type="Script" id=5]
[ext_resource path="res://scenes/player/SkeletonIK.gd" type="Script" id=6]
[ext_resource path="res://scenes/player/rig/gun.gltf" type="PackedScene" id=7]
[ext_resource path="res://scenes/player/rig/gun.gd" type="Script" id=8]
[ext_resource path="res://scenes/player/rig/run-loop.anim" type="Animation" id=9]
[ext_resource path="res://scenes/player/rig/strafe-right-loop.anim" type="Animation" id=10]
[ext_resource path="res://scenes/player/rig/move_backwards_loop.anim" type="Animation" id=11]
[ext_resource path="res://scenes/player/rig/tail_wag_loop.anim" type="Animation" id=12]
[ext_resource path="res://scenes/player/ik_look_at.gd" type="Script" id=13]

[sub_resource type="CapsuleShape" id=16]
height = 3.06804

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 5, 2 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:translation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:translation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:translation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:rotation_degrees:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:rotation_degrees:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath(".:rotation_degrees:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "intro"
length = 4.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "intro_done"
} ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:translation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 21.7808, -0.25, 0, 0.2, -24.2754, -6.4526, -0.6, -0.246537, 0.8, 0.560991, 0.891733, -0.5, -0.161613, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 3, 4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:translation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 13.6551, -0.25, 0, 0.25, 0, 1.74991, -0.25, 0, 0.25, 0, 9.13777, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 3, 4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:translation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 17.4287, -0.25, 0, 0.25, 0, 3.27695, -0.3, 5.20544, 0.3, -6.42296, -13.9793, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 3, 4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:rotation_degrees:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 4 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:rotation_degrees:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 4 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath(".:rotation_degrees:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 4 )
}

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "head_shrink"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "tail_wag_loop"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "run-loop"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "intro-idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "move_backwards_loop"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "strafe-right-loop"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "strafe-right-loop"

[sub_resource type="AnimationNodeBlendSpace2D" id=8]
blend_point_0/node = SubResource( 9 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 10 )
blend_point_1/pos = Vector2( 0, 0 )
blend_point_2/node = SubResource( 11 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 12 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 13 )
blend_point_4/pos = Vector2( -1, 0 )

[sub_resource type="AnimationNodeBlend2" id=4]
filter_enabled = true
filters = [ "Armature/Skeleton:head" ]

[sub_resource type="AnimationNodeBlend2" id=15]
filter_enabled = true
filters = [ "Armature/Skeleton:bone_14", "Armature/Skeleton:bone_15", "Armature/Skeleton:bone_16", "Armature/Skeleton:bone_17" ]

[sub_resource type="AnimationNodeBlendTree" id=5]
graph_offset = Vector2( 333.015, 25.1 )
nodes/Animation/node = SubResource( 14 )
nodes/Animation/position = Vector2( 1040, 360 )
"nodes/Animation 2/node" = SubResource( 2 )
"nodes/Animation 2/position" = Vector2( 640, 260 )
nodes/BlendSpace2D/node = SubResource( 8 )
nodes/BlendSpace2D/position = Vector2( 640, 60 )
nodes/output/position = Vector2( 1580, 120 )
nodes/shrink_head/node = SubResource( 4 )
nodes/shrink_head/position = Vector2( 1040, 120 )
nodes/tail_wag/node = SubResource( 15 )
nodes/tail_wag/position = Vector2( 1320, 200 )
node_connections = [ "shrink_head", 0, "BlendSpace2D", "shrink_head", 1, "Animation 2", "tail_wag", 0, "shrink_head", "tail_wag", 1, "Animation", "output", 0, "tail_wag" ]

[node name="player" type="KinematicBody"]
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.58299, 0.269545 )
shape = SubResource( 16 )

[node name="player_pivot" type="Spatial" parent="."]

[node name="camera_pivot" type="Spatial" parent="player_pivot"]

[node name="Camera" type="Camera" parent="player_pivot/camera_pivot"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 5, 2 )
script = ExtResource( 5 )

[node name="camera_animation" type="AnimationPlayer" parent="player_pivot/camera_pivot/Camera"]
anims/RESET = SubResource( 6 )
anims/intro = SubResource( 7 )

[node name="gun" parent="player_pivot/camera_pivot/Camera" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.008, -0.847, -1.56147 )
script = ExtResource( 8 )
skeleton = NodePath("../../../deemongal/Armature/Skeleton")

[node name="target" type="Position3D" parent="player_pivot/camera_pivot/Camera/gun"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.00358987, -0.0295229, -0.10222 )

[node name="deemongal" parent="player_pivot" instance=ExtResource( 1 )]

[node name="SkeletonIK" type="SkeletonIK" parent="player_pivot/deemongal/Armature/Skeleton" index="1"]
process_priority = 1
root_bone = "bone"
tip_bone = "lower_arm_r_1"
magnet = Vector3( 8, 6, 0 )
target_node = NodePath("../../../../camera_pivot/Camera/gun/target")
script = ExtResource( 6 )

[node name="deemon_animation" type="AnimationPlayer" parent="player_pivot/deemongal"]
autoplay = "intro-idle"
anims/head_shrink = ExtResource( 2 )
anims/intro-idle = ExtResource( 4 )
anims/move_backwards_loop = ExtResource( 11 )
anims/run-loop = ExtResource( 9 )
anims/strafe-right-loop = ExtResource( 10 )
anims/tail_wag_loop = ExtResource( 12 )

[node name="AnimationTree" type="AnimationTree" parent="player_pivot/deemongal"]
tree_root = SubResource( 5 )
anim_player = NodePath("../deemon_animation")
active = true
parameters/BlendSpace2D/blend_position = Vector2( 0, 0 )
parameters/shrink_head/blend_amount = 0.0
parameters/tail_wag/blend_amount = 1.0

[node name="intro_lookat" type="Position3D" parent="player_pivot/deemongal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.40653, 2.01508 )

[node name="ik_look_at" type="Spatial" parent="player_pivot/deemongal"]
script = ExtResource( 13 )
skeleton_path = NodePath("../Armature/Skeleton")
bone_name = "lower_arm_r_1"
additional_rotation = Vector3( 120, 180, 0 )
additional_bone_length = 1

[editable path="player_pivot/deemongal"]
